--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ai": "^4.2.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "solana-agent-kit": "^1.4.9",
     "viem": "^2.23.14",
     "zod": "^3.24.2"
   }
