--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^1.3.0",
     "@goat-sdk/adapter-vercel-ai": "^0.2.10",
+    "@goat-sdk/plugin-debridge": "^0.0.7",
     "@goat-sdk/plugin-erc20": "^0.2.14",
     "@goat-sdk/plugin-uniswap": "^0.2.15",
     "@goat-sdk/wallet-evm": "^0.2.11",
