--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
   "dependencies": {
     "@ai-sdk/openai": "^1.3.0",
     "@goat-sdk/adapter-vercel-ai": "^0.2.10",
+    "@goat-sdk/plugin-coingecko": "^0.2.10",
+    "@goat-sdk/plugin-coinmarketcap": "^0.1.6",
     "@goat-sdk/plugin-debridge": "^0.0.7",
+    "@goat-sdk/plugin-ens": "^0.1.3",
     "@goat-sdk/plugin-erc20": "^0.2.14",
     "@goat-sdk/plugin-opensea": "^0.1.6",
     "@goat-sdk/plugin-polymarket": "^0.3.13",
