--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "main": "dist/index.js",
   "scripts": {
+    "polymarket:api-key": "ts-node create-api.ts",
     "start": "pnpm ts-node src/index.ts"
   },
   "engines": {
@@ -29,7 +30,7 @@
     "@goat-sdk/plugin-coingecko": "^0.2.10",
     "@goat-sdk/plugin-coinmarketcap": "^0.1.6",
     "@goat-sdk/plugin-debridge": "^0.0.7",
-    "@goat-sdk/plugin-ens": "^0.1.3",
+    "@goat-sdk/plugin-ens": "^0.1.4",
     "@goat-sdk/plugin-erc20": "^0.2.14",
     "@goat-sdk/plugin-opensea": "^0.1.6",
     "@goat-sdk/plugin-polymarket": "^0.3.13",
