--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@goat-sdk/adapter-vercel-ai": "^0.2.10",
     "@goat-sdk/plugin-coingecko": "^0.2.10",
     "@goat-sdk/plugin-coinmarketcap": "^0.1.6",
+    "@goat-sdk/plugin-crossmint-headless-checkout": "^0.0.13",
     "@goat-sdk/plugin-debridge": "^0.0.7",
     "@goat-sdk/plugin-ens": "^0.1.4",
     "@goat-sdk/plugin-erc20": "^0.2.14",
