--- a/package.json
+++ b/package.json
@@ -25,7 +25,13 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^1.2.8",
+    "@ai-sdk/deepseek": "^0.2.8",
+    "@ai-sdk/groq": "^1.2.7",
+    "@ai-sdk/mistral": "^1.2.6",
     "@ai-sdk/openai": "^1.3.0",
+    "@ai-sdk/perplexity": "^1.1.6",
+    "@ai-sdk/xai": "^1.2.9",
     "@goat-sdk/adapter-vercel-ai": "^0.2.10",
     "@goat-sdk/plugin-coingecko": "^0.2.10",
     "@goat-sdk/plugin-coinmarketcap": "^0.1.6",
