--- a/package.json
+++ b/package.json
@@ -45,10 +45,13 @@
     "@goat-sdk/plugin-uniswap": "^0.2.15",
     "@goat-sdk/wallet-evm": "^0.2.11",
     "@goat-sdk/wallet-viem": "^0.2.12",
+    "@nillion/nilql": "0.0.0-alpha.13",
     "ai": "^4.2.0",
+    "did-jwt": "^8.0.11",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "solana-agent-kit": "^1.4.9",
+    "uuid": "^11.1.0",
     "viem": "^2.23.14",
     "zod": "^3.24.2"
   }
