--- a/package.json
+++ b/package.json
@@ -46,11 +46,17 @@
     "@goat-sdk/wallet-evm": "^0.2.11",
     "@goat-sdk/wallet-viem": "^0.2.12",
     "@nillion/nilql": "0.0.0-alpha.13",
+    "@solana-agent-kit/plugin-blinks": "^2.0.2",
+    "@solana-agent-kit/plugin-defi": "^2.0.2",
+    "@solana-agent-kit/plugin-misc": "^2.0.2",
+    "@solana-agent-kit/plugin-nft": "^2.0.2",
+    "@solana-agent-kit/plugin-token": "^2.0.2",
     "ai": "^4.2.0",
+    "bs58": "^6.0.0",
     "did-jwt": "^8.0.11",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "solana-agent-kit": "^1.4.9",
+    "solana-agent-kit": "2.0.2",
     "uuid": "^11.1.0",
     "viem": "^2.23.14",
     "zod": "^3.24.2"
