--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "main": "dist/index.js",
   "scripts": {
     "polymarket:api-key": "ts-node create-api.ts",
-    "start": "pnpm ts-node src/index.ts"
+    "start": "ts-node src/index.ts"
   },
   "engines": {
-    "node": ">=20.12.2 <23",
+    "node": ">=20.12.2 <=24",
     "npm": "please-use-pnpm",
     "pnpm": ">=9",
     "yarn": "please-use-pnpm"
@@ -51,14 +51,22 @@
     "@solana-agent-kit/plugin-misc": "^2.0.2",
     "@solana-agent-kit/plugin-nft": "^2.0.2",
     "@solana-agent-kit/plugin-token": "^2.0.2",
+    "@solana/web3.js": "^1.77.3",
     "ai": "^4.2.0",
     "bs58": "^6.0.0",
     "did-jwt": "^8.0.11",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "node-fetch": "^2.7.0",
+    "rpc-websockets": "^7.5.1",
     "solana-agent-kit": "2.0.2",
     "uuid": "^11.1.0",
     "viem": "^2.23.14",
     "zod": "^3.24.2"
+  },
+  "resolutions": {
+    "node-fetch": "2.7.0",
+    "rpc-websockets": "7.5.1",
+    "@solana/web3.js": "1.77.3"
   }
 }
