--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
       "lib": ["DOM", "ES6"],
       "noErrorTruncation": true,
       "emitDecoratorMetadata": true,
-      "experimentalDecorators": true
+      "experimentalDecorators": true,
+      "allowSyntheticDefaultImports": true
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "dist"]
